Compilacao de componente subsistema funcionando...